# pshell

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  tag.yml
examples/: what_shell.rs
src/: lib.rs
